<resources>
    <string name="app_name" translatable="false">Cycling Fizz</string>
    <string name="street_view">Street view</string>
    <string name="new_poi">New point of interest</string>
    <string name="new_route">New route</string>
    <string name="pois">Points of Interest</string>
    <string name="pois_description">Interesting places along this route</string>
    <string name="route_overview">Route overview</string>
    <string name="reviews">Reviews</string>
    <string name="comments">Comments</string>
    <string name="edit_comment">Edit comment</string>
    <string name="settings">Settings</string>
    <string name="routes_created">routes created</string>
    <string name="routes_played">routes played</string>

    <!-- Actions -->
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="link">Get URL</string>
    <string name="share">Share</string>
    <string name="flag_as_inappropriate">Flag as inappropriate</string>
    <string name="filter">Filter</string>
    <string name="filter_gira">Gira stations</string>
    <string name="filter_cycleways">Cycleways</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="click_to_expand">Click to expand</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_later">Sign in later</string>
    <string name="sign_up_later">Sign up later</string>
    <string name="sign_up">Sign up</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="ok">OK</string>
    <string name="record">Record</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="pick_photos">Pick photos</string>
    <string name="choose_video">Choose video</string>
    <string name="take_photo">Take photo</string>
    <string name="quit">Quit</string>
    <string name="sort">Sort</string>
    <string name="leave_comment">Leave a comment</string>
    <string name="leave_review">Leave a review</string>
    <string name="done">Done</string>
    <string name="view_more">View More</string>
    <string name="ignore">Ignore</string>
    <string name="no">No</string>
    <string name="stop_route">Stop route</string>
    <string name="sort_by">Sort by:</string>

    <string name="edit_review">Edit review</string>

    <!-- States -->
    <string name="recording">Recording…</string>
    <string name="on_a_route">On a route</string>

    <!-- Warnings -->
    <string name="not_available">Not available</string>
    <string name="no_name">No name</string>
    <string name="no_comment">No comment</string>
    <string name="sign_in_required">Sign in required</string>
    <string name="renting_dialog_warning">You need to be signed in to rent a bike.</string>
    <string name="creating_route_dialog_warning">You need to be signed in to create a route.</string>
    <string name="leaving_a_comment_dialog_warning">You need to be signed in to leave a comment.</string>
    <string name="deleting_poi_dialog_warning">Do you want to delete this point of interest from the route?</string>
    <string name="name_required">Name required</string>
    <string name="comment_required">Comment required</string>
    <string name="description_required">Description required</string>
    <string name="delete_route">Delete route</string>
    <string name="delete_route_warning">You’re about to delete this route. You won’t be able to recover it after this. Are you sure you want to delete?</string>
    <string name="delete_review">Delete review</string>
    <string name="delete_review_warning">You’re about to delete this review. You won’t be able to recover it after this. Are you sure you want to delete?</string>
    <string name="already_recording">Already recording route</string>
    <string name="already_recording_warning">You are already recording a route! Please end the current recording first.</string>
    <string name="short_route">Short route</string>
    <string name="short_route_warning">Route is too short and it won’t be saved.</string>
    <string name="route_being_played">Route being played</string>
    <string name="route_being_played_warning">You are currently playing a route! Please stop the playing first.</string>
    <string name="route_being_recorded">Route being recorded</string>
    <string name="route_being_recorded_warning">You are currently recording a route! Please stop the recording first.</string>
    <string name="delete_comment">Delete comment</string>
    <string name="delete_comment_warning">You’re about to delete this comment. Are you sure you want to delete?</string>


    <!-- Messages -->
    <string name="route_recorded">Route recorded</string>
    <string name="route_recorded_message">Congratulations, you’ve just recorded a new route!</string>
    <string name="route_play_finished">Route Ended</string>
    <string name="route_play_finished_message">Congratulations, you’ve just completed the route! Do you what to stop playing it?</string>
    <string name="ask_rate_route">Rate route?</string>
    <string name="ask_rate_route_message">Did you like this route? Review it and let other user know your opinion!</string>

    <!-- Welcome -->
    <string name="motto">Discover Lisbon’s attractions and hotspots by bike</string>

    <!-- Intro 1 -->
    <string name="intro1_title">Rent bikes</string>
    <string name="intro1_text">Explore Lisbon by bike with our bike-sharing system</string>

    <!-- Intro 2 -->
    <string name="intro2_title">Play routes</string>
    <string name="intro2_text">Go through a route and get to know the best places around</string>

    <!-- Intro 3 -->
    <string name="intro3_title">Create routes</string>
    <string name="intro3_text">Create custom routes for other people to follow along</string>

    <!-- Sidebar -->
    <string name="sidebar_map">Cycling Map</string>
    <string name="sidebar_routes">Bike Routes</string>
    <string name="sidebar_about">About Cycling Fizz</string>
    <string name="sidebar_profile">Profile</string>
    <string name="sidebar_logout">Log out</string>

    <!-- Map info - cycleways -->
    <string name="map_info_type">Type</string>
    <string name="map_info_terrain">Terrain</string>
    <string name="map_info_type_segregated">Segregated</string>
    <string name="map_info_type_shared_pedestrians">Shared with pedestrians</string>
    <string name="map_info_type_shared_lane">Shared lane</string>
    <string name="map_info_type_lane">Lane</string>
    <string name="map_info_type_track">Track</string>
    <string name="map_info_type_bridge">Bridge</string>
    <string name="map_info_type_oneway">One way</string>
    <string name="map_info_type_crossing">Crossing</string>
    <string name="map_info_type_shared_other">Other</string>

    <!-- Map info - stations -->
    <string name="map_info_bikes">Bicycles</string>
    <string name="map_info_free_docks">Free docks</string>
    <string name="map_info_state">State</string>
    <string name="map_info_rent">Rent bike</string>

    <!-- Renting -->
    <string name="unlock_bike">Unlock bike</string>
    <string name="lock_bike">Lock bike</string>
    <string name="end_ride">End ride</string>
    <string name="bike_delivered">Bike delivered!</string>
    <string name="bike_delivered_message">Your trip has ended. See you next time.</string>

    <!-- Login -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="create_one">Create one</string>
    <string name="sign_in_using">Sign in using</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="or">or</string>
    <string name="email_required_error">Please input your email address.</string>
    <string name="email_format_error">Invalid email address format.</string>
    <string name="email_invalid_error">Email address does not exist or is invalid.</string>
    <string name="password_required_error">Please input your password.</string>
    <string name="password_wrong_error">Password is incorrect or invalid.</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="sign_in_msg">Click here to sign in</string>
    <string name="create_failed">Could not create account.</string>
    <string name="passwords_not_match">Passwords don\'t match</string>
    <string name="email_duplicated">This email already have an account registered.</string>

    <!-- Routes -->
    <string name="name">Name</string>
    <string name="description">Description</string>

    <!-- Comments -->
    <string name="write_comment">Write your comment…</string>

    <!-- Sort -->
    <string name="sort_most_recent">Newest</string>
    <string name="sort_least_recent">Oldest</string>
    <string name="sort_best_rate">Best rate</string>
    <string name="sort_worst_rate">Worst rate</string>

    <!-- Reviews -->
    <string name="write_review">Describe your experience (optional)</string>
    <string name="rate_route">Rate this route</string>
    <string name="tell_others_what_you_think">Tell others what you think</string>

    <!-- Reviews -->
    <string name="are_you_sure_flag">Are you sure?</string>
    <string name="are_you_sure_flag_message">You are about to flag this as inappropriate or incorrect. You won\'t be able to see this information again.\n\nDo you want to proceed?</string>
    <string name="are_you_sure_flag_positive">Flag</string>

    <!-- Location Permissions -->

    <!--    todo mesmo change this string-->
    <string name="user_location_permission_explanation">This app needs your location to find you in the map.</string>
    <string name="user_location_permission_not_granted">Location permission not granted</string>

    <!-- Location Turn on Dialog -->

    <string name="user_location_turn_on_title">Turn on Location?</string>
    <string name="user_location_turn_on_text">This app needs your location to find you in the map.</string>
    <string name="user_location_turn_on_ignore">Ignore</string>
    <string name="user_location_turn_on_setting">Open Settings</string>

    <!-- Keys TODO: move somewhere else -->
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiYmVycmUiLCJhIjoiY2tvbXlhNTQyMTdqbDJ2bzBrYXprdDVnbSJ9.-SjB3Hp2spLDCOwXxr_LFw</string>
    <string name="google_API_KEY" translatable="false">AIzaSyBycELmIsSb30MHTmFol4Ez5lXSc1IA7eg</string>
    <string name="google_signing_secret" translatable="false">DTDrKz5z8ti16fOGYOhIkPNFkXk=</string>
    <string name="created_by">Created by </string>
    <string name="portuguese">Portuguese</string>
    <string name="english">English</string>
    <string name="language">Language</string>
</resources>