<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter"
        android:icon="@drawable/ic_round_filter_alt_24"
        android:title="@string/filter"
        app:showAsAction="ifRoom">

        <menu
            android:id="@+id/menu_filter_map">
            <item
                android:id="@+id/filter_cycleways"
                android:title="@string/filter_cycleways"
                android:icon="@drawable/ic_cycleway"
                app:showAsAction="never"
                android:checkable="true"
                android:checked="true" />
            <item
                android:id="@+id/filter_gira"
                android:title="@string/filter_gira"
                android:icon="@drawable/ic_station"
                app:showAsAction="never"
                android:checkable="true"
                android:checked="true"/>
        </menu>

    </item>

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_round_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/more"
        android:title="@string/more"
        app:showAsAction="never" />

</menu>